--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tree-sitter = "0.20"
 tree-sitter-php = "0.20"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_yaml = "0.9.34"
+serde_json = "1.0"
 
 [[bin]]
 name = "dump-tree"
