--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ tree-sitter-php = "0.20"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_yaml = "0.9.34"
 serde_json = "1.0"
+rayon = "1.10"
+indicatif = "0.17"
 
 [[bin]]
 name = "dump-tree"
